Splitting dataset to train and test

--- a/Condition Monitoring of Hydraulic System/Bagging.ipynb
+++ b/Condition Monitoring of Hydraulic System/Bagging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a83c9a50",
+   "id": "f089ba29",
    "metadata": {},
    "source": [
     "# Importing modules"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ae80370e",
+   "id": "d13c5e67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c9af682",
+   "id": "eaa9af1e",
    "metadata": {},
    "source": [
     "# Loading datset"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "40f53b7e",
+   "id": "7ce05fcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "842788ab",
+   "id": "645b5d5b",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3760c011",
+   "id": "7d3cc930",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "44e3880b",
+   "id": "9a154070",
    "metadata": {},
    "outputs": [
     {
@@ -768,16 +768,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfc872a3",
+   "id": "7af3a2ab",
    "metadata": {},
    "source": [
-    "# Assigning values to X and y"
+    "# Assigning values to X and y "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "e584f7a6",
+   "execution_count": 18,
+   "id": "1cb94ec0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,8 +789,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "fde2d6cf",
+   "execution_count": 19,
+   "id": "74e34ebd",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
        "[2205 rows x 17 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,8 +1113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "d48e4584",
+   "execution_count": 21,
+   "id": "e3c79a55",
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
        "[2205 rows x 5 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,12 +1279,356 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "17028a2a",
+   "metadata": {},
+   "source": [
+    "# Splitting dataset to train and test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3273b598",
+   "execution_count": 22,
+   "id": "ec8bea2d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0ab5ca20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PS1</th>\n",
+       "      <th>PS2</th>\n",
+       "      <th>PS3</th>\n",
+       "      <th>PS4</th>\n",
+       "      <th>PS5</th>\n",
+       "      <th>PS6</th>\n",
+       "      <th>FS1</th>\n",
+       "      <th>FS2</th>\n",
+       "      <th>TS1</th>\n",
+       "      <th>TS2</th>\n",
+       "      <th>TS3</th>\n",
+       "      <th>TS4</th>\n",
+       "      <th>P1</th>\n",
+       "      <th>VS1</th>\n",
+       "      <th>CE1</th>\n",
+       "      <th>CP1</th>\n",
+       "      <th>SE1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>572</th>\n",
+       "      <td>156.259090</td>\n",
+       "      <td>105.109720</td>\n",
+       "      <td>1.686528</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.409337</td>\n",
+       "      <td>8.359900</td>\n",
+       "      <td>6.572717</td>\n",
+       "      <td>8.932982</td>\n",
+       "      <td>57.330050</td>\n",
+       "      <td>61.493300</td>\n",
+       "      <td>58.674333</td>\n",
+       "      <td>52.562750</td>\n",
+       "      <td>2367.347967</td>\n",
+       "      <td>0.727367</td>\n",
+       "      <td>18.882850</td>\n",
+       "      <td>1.471883</td>\n",
+       "      <td>59.950200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>157.029422</td>\n",
+       "      <td>106.361600</td>\n",
+       "      <td>1.729071</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.592279</td>\n",
+       "      <td>8.533665</td>\n",
+       "      <td>6.601323</td>\n",
+       "      <td>9.239225</td>\n",
+       "      <td>53.610750</td>\n",
+       "      <td>58.093367</td>\n",
+       "      <td>55.153417</td>\n",
+       "      <td>49.000933</td>\n",
+       "      <td>2405.333733</td>\n",
+       "      <td>0.653417</td>\n",
+       "      <td>20.267500</td>\n",
+       "      <td>1.531833</td>\n",
+       "      <td>60.262533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1161</th>\n",
+       "      <td>159.114915</td>\n",
+       "      <td>107.267202</td>\n",
+       "      <td>1.803048</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9.136608</td>\n",
+       "      <td>9.051796</td>\n",
+       "      <td>6.632630</td>\n",
+       "      <td>9.690735</td>\n",
+       "      <td>44.593617</td>\n",
+       "      <td>49.634633</td>\n",
+       "      <td>46.804117</td>\n",
+       "      <td>40.021017</td>\n",
+       "      <td>2460.764700</td>\n",
+       "      <td>0.612783</td>\n",
+       "      <td>27.786933</td>\n",
+       "      <td>1.770233</td>\n",
+       "      <td>58.852000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>789</th>\n",
+       "      <td>158.176940</td>\n",
+       "      <td>107.214707</td>\n",
+       "      <td>1.786352</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.970626</td>\n",
+       "      <td>8.898110</td>\n",
+       "      <td>6.634915</td>\n",
+       "      <td>9.604517</td>\n",
+       "      <td>47.109183</td>\n",
+       "      <td>52.262500</td>\n",
+       "      <td>49.325900</td>\n",
+       "      <td>42.666800</td>\n",
+       "      <td>2447.128100</td>\n",
+       "      <td>0.597333</td>\n",
+       "      <td>26.399917</td>\n",
+       "      <td>1.724267</td>\n",
+       "      <td>59.569083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1322</th>\n",
+       "      <td>158.989445</td>\n",
+       "      <td>107.983810</td>\n",
+       "      <td>1.806356</td>\n",
+       "      <td>0.000158</td>\n",
+       "      <td>9.146062</td>\n",
+       "      <td>9.061882</td>\n",
+       "      <td>6.672445</td>\n",
+       "      <td>9.723228</td>\n",
+       "      <td>44.389533</td>\n",
+       "      <td>49.417183</td>\n",
+       "      <td>46.637700</td>\n",
+       "      <td>39.878583</td>\n",
+       "      <td>2464.307600</td>\n",
+       "      <td>0.602217</td>\n",
+       "      <td>27.348517</td>\n",
+       "      <td>1.772367</td>\n",
+       "      <td>59.857767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1033</th>\n",
+       "      <td>158.867803</td>\n",
+       "      <td>107.103200</td>\n",
+       "      <td>1.789223</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9.054415</td>\n",
+       "      <td>8.976108</td>\n",
+       "      <td>6.643458</td>\n",
+       "      <td>9.662503</td>\n",
+       "      <td>45.757833</td>\n",
+       "      <td>50.665533</td>\n",
+       "      <td>47.919200</td>\n",
+       "      <td>41.195717</td>\n",
+       "      <td>2460.162400</td>\n",
+       "      <td>0.616033</td>\n",
+       "      <td>28.058167</td>\n",
+       "      <td>1.751483</td>\n",
+       "      <td>58.991450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1731</th>\n",
+       "      <td>160.771032</td>\n",
+       "      <td>109.054252</td>\n",
+       "      <td>1.935512</td>\n",
+       "      <td>10.112827</td>\n",
+       "      <td>9.880726</td>\n",
+       "      <td>9.761596</td>\n",
+       "      <td>6.500505</td>\n",
+       "      <td>10.175213</td>\n",
+       "      <td>35.897400</td>\n",
+       "      <td>41.499200</td>\n",
+       "      <td>38.796267</td>\n",
+       "      <td>30.888767</td>\n",
+       "      <td>2553.740300</td>\n",
+       "      <td>0.542833</td>\n",
+       "      <td>47.345067</td>\n",
+       "      <td>2.168317</td>\n",
+       "      <td>56.692333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>763</th>\n",
+       "      <td>157.909970</td>\n",
+       "      <td>106.973936</td>\n",
+       "      <td>1.779225</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.924975</td>\n",
+       "      <td>8.852112</td>\n",
+       "      <td>6.626108</td>\n",
+       "      <td>9.544212</td>\n",
+       "      <td>47.881850</td>\n",
+       "      <td>53.009617</td>\n",
+       "      <td>50.051850</td>\n",
+       "      <td>43.319533</td>\n",
+       "      <td>2436.215500</td>\n",
+       "      <td>0.595333</td>\n",
+       "      <td>26.283400</td>\n",
+       "      <td>1.731600</td>\n",
+       "      <td>59.623317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>835</th>\n",
+       "      <td>158.262197</td>\n",
+       "      <td>107.266625</td>\n",
+       "      <td>1.803427</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.985091</td>\n",
+       "      <td>8.909845</td>\n",
+       "      <td>6.636710</td>\n",
+       "      <td>9.607130</td>\n",
+       "      <td>46.754067</td>\n",
+       "      <td>51.858083</td>\n",
+       "      <td>48.984550</td>\n",
+       "      <td>42.363117</td>\n",
+       "      <td>2443.892400</td>\n",
+       "      <td>0.603817</td>\n",
+       "      <td>26.282333</td>\n",
+       "      <td>1.713750</td>\n",
+       "      <td>59.742533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1653</th>\n",
+       "      <td>161.047945</td>\n",
+       "      <td>109.579380</td>\n",
+       "      <td>2.008050</td>\n",
+       "      <td>0.785936</td>\n",
+       "      <td>9.937681</td>\n",
+       "      <td>9.819300</td>\n",
+       "      <td>6.687085</td>\n",
+       "      <td>10.195733</td>\n",
+       "      <td>35.514217</td>\n",
+       "      <td>41.111717</td>\n",
+       "      <td>38.441000</td>\n",
+       "      <td>30.552333</td>\n",
+       "      <td>2542.090533</td>\n",
+       "      <td>0.562700</td>\n",
+       "      <td>47.129133</td>\n",
+       "      <td>2.166700</td>\n",
+       "      <td>58.897267</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1764 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             PS1         PS2       PS3        PS4       PS5       PS6  \\\n",
+       "572   156.259090  105.109720  1.686528   0.000000  8.409337  8.359900   \n",
+       "117   157.029422  106.361600  1.729071   0.000000  8.592279  8.533665   \n",
+       "1161  159.114915  107.267202  1.803048   0.000000  9.136608  9.051796   \n",
+       "789   158.176940  107.214707  1.786352   0.000000  8.970626  8.898110   \n",
+       "1322  158.989445  107.983810  1.806356   0.000158  9.146062  9.061882   \n",
+       "...          ...         ...       ...        ...       ...       ...   \n",
+       "1033  158.867803  107.103200  1.789223   0.000000  9.054415  8.976108   \n",
+       "1731  160.771032  109.054252  1.935512  10.112827  9.880726  9.761596   \n",
+       "763   157.909970  106.973936  1.779225   0.000000  8.924975  8.852112   \n",
+       "835   158.262197  107.266625  1.803427   0.000000  8.985091  8.909845   \n",
+       "1653  161.047945  109.579380  2.008050   0.785936  9.937681  9.819300   \n",
+       "\n",
+       "           FS1        FS2        TS1        TS2        TS3        TS4  \\\n",
+       "572   6.572717   8.932982  57.330050  61.493300  58.674333  52.562750   \n",
+       "117   6.601323   9.239225  53.610750  58.093367  55.153417  49.000933   \n",
+       "1161  6.632630   9.690735  44.593617  49.634633  46.804117  40.021017   \n",
+       "789   6.634915   9.604517  47.109183  52.262500  49.325900  42.666800   \n",
+       "1322  6.672445   9.723228  44.389533  49.417183  46.637700  39.878583   \n",
+       "...        ...        ...        ...        ...        ...        ...   \n",
+       "1033  6.643458   9.662503  45.757833  50.665533  47.919200  41.195717   \n",
+       "1731  6.500505  10.175213  35.897400  41.499200  38.796267  30.888767   \n",
+       "763   6.626108   9.544212  47.881850  53.009617  50.051850  43.319533   \n",
+       "835   6.636710   9.607130  46.754067  51.858083  48.984550  42.363117   \n",
+       "1653  6.687085  10.195733  35.514217  41.111717  38.441000  30.552333   \n",
+       "\n",
+       "               P1       VS1        CE1       CP1        SE1  \n",
+       "572   2367.347967  0.727367  18.882850  1.471883  59.950200  \n",
+       "117   2405.333733  0.653417  20.267500  1.531833  60.262533  \n",
+       "1161  2460.764700  0.612783  27.786933  1.770233  58.852000  \n",
+       "789   2447.128100  0.597333  26.399917  1.724267  59.569083  \n",
+       "1322  2464.307600  0.602217  27.348517  1.772367  59.857767  \n",
+       "...           ...       ...        ...       ...        ...  \n",
+       "1033  2460.162400  0.616033  28.058167  1.751483  58.991450  \n",
+       "1731  2553.740300  0.542833  47.345067  2.168317  56.692333  \n",
+       "763   2436.215500  0.595333  26.283400  1.731600  59.623317  \n",
+       "835   2443.892400  0.603817  26.282333  1.713750  59.742533  \n",
+       "1653  2542.090533  0.562700  47.129133  2.166700  58.897267  \n",
+       "\n",
+       "[1764 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1f92418",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train"
+   ]
   }
  ],
  "metadata": {
