Create a base decision tree classifier and bagging classifier

--- a/Condition Monitoring of Hydraulic System/Bagging.ipynb
+++ b/Condition Monitoring of Hydraulic System/Bagging.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "id": "e04643e5",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "id": "2b5b368a",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "id": "2c99db38",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
        "[2205 rows x 23 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "id": "c4467900",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 74,
    "id": "b3a2d148",
    "metadata": {},
    "outputs": [
@@ -757,7 +757,7 @@
        "[8 rows x 23 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "id": "e020c7fc",
    "metadata": {},
    "outputs": [],
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 76,
    "id": "c991389a",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1102,7 @@
        "[2205 rows x 17 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 77,
    "id": "b9fdd75d",
    "metadata": {},
    "outputs": [
@@ -1269,7 +1269,7 @@
        "[2205 rows x 5 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 78,
    "id": "66015342",
    "metadata": {},
    "outputs": [],
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 79,
    "id": "0eccd948",
    "metadata": {},
    "outputs": [
@@ -1611,7 +1611,7 @@
        "[1764 rows x 17 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 80,
    "id": "0d660e9b",
    "metadata": {},
    "outputs": [
@@ -1778,7 +1778,7 @@
        "[1764 rows x 5 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1789,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 81,
    "id": "cf578d83",
    "metadata": {},
    "outputs": [
@@ -2102,7 +2102,7 @@
        "[441 rows x 17 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2113,7 +2113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 82,
    "id": "fb021440",
    "metadata": {},
    "outputs": [
@@ -2269,7 +2269,7 @@
        "[441 rows x 5 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2279,9 +2279,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aeb9c53d",
+   "metadata": {},
+   "source": [
+    "# Create a base decision tree classifier and bagging classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "32b0eafb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_classifier = DecisionTreeClassifier(random_state=42)\n",
+    "bagging_classifier = BaggingClassifier(base_classifier, n_estimators=10, random_state=42)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32b0eafb",
+   "id": "59f81d4b",
    "metadata": {},
    "outputs": [],
    "source": []
