--- a/Condition Monitoring of Hydraulic System/Bagging.ipynb
+++ b/Condition Monitoring of Hydraulic System/Bagging.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 107,
    "id": "e04643e5",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 108,
    "id": "2b5b368a",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 109,
    "id": "2c99db38",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
        "[2205 rows x 23 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 110,
    "id": "c4467900",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 111,
    "id": "b3a2d148",
    "metadata": {},
    "outputs": [
@@ -757,7 +757,7 @@
        "[8 rows x 23 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 112,
    "id": "e020c7fc",
    "metadata": {},
    "outputs": [],
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 113,
    "id": "c991389a",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1102,7 @@
        "[2205 rows x 17 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 114,
    "id": "b9fdd75d",
    "metadata": {},
    "outputs": [
@@ -1269,7 +1269,7 @@
        "[2205 rows x 5 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 115,
    "id": "66015342",
    "metadata": {},
    "outputs": [],
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 116,
    "id": "0eccd948",
    "metadata": {},
    "outputs": [
@@ -1611,7 +1611,7 @@
        "[1764 rows x 17 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 117,
    "id": "0d660e9b",
    "metadata": {},
    "outputs": [
@@ -1778,7 +1778,7 @@
        "[1764 rows x 5 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1789,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 118,
    "id": "cf578d83",
    "metadata": {},
    "outputs": [
@@ -2102,7 +2102,7 @@
        "[441 rows x 17 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2113,7 +2113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 119,
    "id": "fb021440",
    "metadata": {},
    "outputs": [
@@ -2269,7 +2269,7 @@
        "[441 rows x 5 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2280,7 +2280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeb9c53d",
+   "id": "1d524644",
    "metadata": {},
    "source": [
     "# Create a base decision tree classifier and bagging classifier"
@@ -2288,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 120,
    "id": "32b0eafb",
    "metadata": {},
    "outputs": [],
@@ -2298,9 +2298,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0d43f15d",
+   "metadata": {},
+   "source": [
+    "# Use MultiOutputClassifier to handle multiple target variables and Fit the multi-output classifier on the training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "70a228a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-3 {color: black;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MultiOutputClassifier(estimator=BaggingClassifier(estimator=DecisionTreeClassifier(random_state=42),\n",
+       "                                                  random_state=42))</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-9\" type=\"checkbox\" ><label for=\"sk-estimator-id-9\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MultiOutputClassifier</label><div class=\"sk-toggleable__content\"><pre>MultiOutputClassifier(estimator=BaggingClassifier(estimator=DecisionTreeClassifier(random_state=42),\n",
+       "                                                  random_state=42))</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-10\" type=\"checkbox\" ><label for=\"sk-estimator-id-10\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">estimator: BaggingClassifier</label><div class=\"sk-toggleable__content\"><pre>BaggingClassifier(estimator=DecisionTreeClassifier(random_state=42),\n",
+       "                  random_state=42)</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-11\" type=\"checkbox\" ><label for=\"sk-estimator-id-11\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">estimator: DecisionTreeClassifier</label><div class=\"sk-toggleable__content\"><pre>DecisionTreeClassifier(random_state=42)</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-12\" type=\"checkbox\" ><label for=\"sk-estimator-id-12\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">DecisionTreeClassifier</label><div class=\"sk-toggleable__content\"><pre>DecisionTreeClassifier(random_state=42)</pre></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "MultiOutputClassifier(estimator=BaggingClassifier(estimator=DecisionTreeClassifier(random_state=42),\n",
+       "                                                  random_state=42))"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multi_output_classifier = MultiOutputClassifier(bagging_classifier)\n",
+    "multi_output_classifier.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1008291",
+   "metadata": {},
+   "source": [
+    "# Make predictions on the test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "c7992248",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = multi_output_classifier.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddcbbabe",
+   "metadata": {},
+   "source": [
+    "# Calculate the accuracy for each target variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "eb1e39f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for y_coolerCondition: 0.9977324263038548\n",
+      "Accuracy for y_valveCondition: 0.9591836734693877\n",
+      "Accuracy for y_pumpLeak: 0.9909297052154195\n",
+      "Accuracy for y_hydraulicAcc: 0.9523809523809523\n",
+      "Accuracy for y_stableFlag: 0.981859410430839\n",
+      "\n",
+      "Average Accuracy: 0.9764172335600906\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracies = [accuracy_score(y_test[col], y_pred[:, idx]) for idx, col in enumerate(y_test.columns)]\n",
+    "average_accuracy = sum(accuracies) / len(accuracies)\n",
+    "\n",
+    "for idx, col in enumerate(y_test.columns):\n",
+    "    print(f\"Accuracy for {col}: {accuracies[idx]}\")\n",
+    "\n",
+    "print(f\"\\nAverage Accuracy: {average_accuracy}\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59f81d4b",
+   "id": "e386f4bc",
    "metadata": {},
    "outputs": [],
    "source": []
