Create the Gradient Boosting Classifier

--- a/Condition Monitoring of Hydraulic System/Boosting.ipynb
+++ b/Condition Monitoring of Hydraulic System/Boosting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2f668b17",
+   "id": "95e34852",
    "metadata": {},
    "source": [
     "# Importing modules"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "46a62666",
+   "execution_count": 17,
+   "id": "12710497",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fde4750",
+   "id": "43745ae3",
    "metadata": {},
    "source": [
     "# Loading dataset"
@@ -38,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "75630c75",
+   "execution_count": 18,
+   "id": "54d009c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f24ea854",
+   "execution_count": 19,
+   "id": "d42036f8",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "[2205 rows x 23 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,8 +433,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "2e6a3650",
+   "execution_count": 20,
+   "id": "410ae32d",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,8 +458,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "38da3dd6",
+   "execution_count": 21,
+   "id": "46559d01",
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
        "[8 rows x 23 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "874dee61",
+   "id": "921b37cf",
    "metadata": {},
    "source": [
     "# Assigning values to X and y"
@@ -777,8 +777,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5fde6a7c",
+   "execution_count": 22,
+   "id": "57696e45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,8 +790,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "20187d84",
+   "execution_count": 23,
+   "id": "376432e7",
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
        "[2205 rows x 17 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,8 +1114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "9836c4ed",
+   "execution_count": 24,
+   "id": "2386bba0",
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
        "[2205 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba149dc2",
+   "id": "69607173",
    "metadata": {},
    "source": [
     "# Splitting dataset to train and test"
@@ -1289,8 +1289,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "5fadfcfd",
+   "execution_count": 25,
+   "id": "a12a6d55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,8 +1299,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "1624ee97",
+   "execution_count": 26,
+   "id": "9fb42f90",
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1612,7 @@
        "[1764 rows x 17 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1623,8 +1623,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "8ecd15a7",
+   "execution_count": 27,
+   "id": "25fe44b4",
    "metadata": {},
    "outputs": [
     {
@@ -1779,7 +1779,7 @@
        "[1764 rows x 5 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1790,8 +1790,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "a3f8a42a",
+   "execution_count": 28,
+   "id": "92077a84",
    "metadata": {},
    "outputs": [
     {
@@ -2103,7 +2103,7 @@
        "[441 rows x 17 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2114,8 +2114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "b7dd8cb7",
+   "execution_count": 29,
+   "id": "1f6f03b5",
    "metadata": {},
    "outputs": [
     {
@@ -2270,7 +2270,7 @@
        "[441 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2280,9 +2280,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7eb7f1b2",
+   "metadata": {},
+   "source": [
+    "# Create the Gradient Boosting Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "68e2c4a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'GradientBoostingClassifier' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[30], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m base_classifier \u001b[38;5;241m=\u001b[39m GradientBoostingClassifier()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'GradientBoostingClassifier' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "base_classifier = GradientBoostingClassifier()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e74084ac",
+   "id": "885e0c96",
    "metadata": {},
    "outputs": [],
    "source": []
