--- a/Condition Monitoring of Hydraulic System/Boosting.ipynb
+++ b/Condition Monitoring of Hydraulic System/Boosting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "95e34852",
+   "id": "b293c0fc",
    "metadata": {},
    "source": [
     "# Importing modules"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "12710497",
+   "execution_count": 47,
+   "id": "5cd0e793",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import BaggingClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.multioutput import MultiOutputClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.datasets import load_digits\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43745ae3",
+   "id": "fa65a9c6",
    "metadata": {},
    "source": [
     "# Loading dataset"
@@ -38,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "54d009c5",
+   "execution_count": 48,
+   "id": "a0274ddb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "d42036f8",
+   "execution_count": 49,
+   "id": "d2056b81",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "[2205 rows x 23 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,8 +433,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "410ae32d",
+   "execution_count": 50,
+   "id": "16c723d3",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,8 +458,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "46559d01",
+   "execution_count": 51,
+   "id": "797e8fff",
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
        "[8 rows x 23 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "921b37cf",
+   "id": "6e97ba3d",
    "metadata": {},
    "source": [
     "# Assigning values to X and y"
@@ -777,8 +777,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "57696e45",
+   "execution_count": 52,
+   "id": "54794ef3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,8 +790,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "376432e7",
+   "execution_count": 53,
+   "id": "bda930eb",
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
        "[2205 rows x 17 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,8 +1114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "2386bba0",
+   "execution_count": 54,
+   "id": "6ca4b3af",
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
        "[2205 rows x 5 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69607173",
+   "id": "ab20100b",
    "metadata": {},
    "source": [
     "# Splitting dataset to train and test"
@@ -1289,8 +1289,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "a12a6d55",
+   "execution_count": 55,
+   "id": "2330d394",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,8 +1299,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "9fb42f90",
+   "execution_count": 56,
+   "id": "ca48a02b",
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1612,7 @@
        "[1764 rows x 17 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1623,8 +1623,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "25fe44b4",
+   "execution_count": 57,
+   "id": "2cd8823d",
    "metadata": {},
    "outputs": [
     {
@@ -1779,7 +1779,7 @@
        "[1764 rows x 5 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1790,8 +1790,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "92077a84",
+   "execution_count": 58,
+   "id": "fe35424f",
    "metadata": {},
    "outputs": [
     {
@@ -2103,7 +2103,7 @@
        "[441 rows x 17 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2114,8 +2114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "1f6f03b5",
+   "execution_count": 59,
+   "id": "b110d4b1",
    "metadata": {},
    "outputs": [
     {
@@ -2270,7 +2270,7 @@
        "[441 rows x 5 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2281,7 +2281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eb7f1b2",
+   "id": "f1a2ef93",
    "metadata": {},
    "source": [
     "# Create the Gradient Boosting Classifier"
@@ -2289,33 +2289,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "68e2c4a3",
+   "execution_count": 60,
+   "id": "838180f7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'GradientBoostingClassifier' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[30], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m base_classifier \u001b[38;5;241m=\u001b[39m GradientBoostingClassifier()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'GradientBoostingClassifier' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "base_classifier = GradientBoostingClassifier()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b828faf7",
+   "metadata": {},
+   "source": [
+    "# Create the MultiOutputClassifier and Fit the model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "885e0c96",
+   "execution_count": 61,
+   "id": "50c44ce7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MultiOutputClassifier(estimator=GradientBoostingClassifier())</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MultiOutputClassifier</label><div class=\"sk-toggleable__content\"><pre>MultiOutputClassifier(estimator=GradientBoostingClassifier())</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" ><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">estimator: GradientBoostingClassifier</label><div class=\"sk-toggleable__content\"><pre>GradientBoostingClassifier()</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" ><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">GradientBoostingClassifier</label><div class=\"sk-toggleable__content\"><pre>GradientBoostingClassifier()</pre></div></div></div></div></div></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "MultiOutputClassifier(estimator=GradientBoostingClassifier())"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier = MultiOutputClassifier(base_classifier)\n",
+    "classifier.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b250c9a2",
+   "metadata": {},
+   "source": [
+    "# Make predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "09e1d33a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_pred = classifier.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "ee286757",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "multiclass-multioutput is not supported",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[63], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Evaluate the model\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m accuracy \u001b[38;5;241m=\u001b[39m accuracy_score(y_test, y_pred)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAccuracy: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00maccuracy\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py:211\u001b[0m, in \u001b[0;36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    205\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    206\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[0;32m    207\u001b[0m         skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[0;32m    208\u001b[0m             prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[0;32m    209\u001b[0m         )\n\u001b[0;32m    210\u001b[0m     ):\n\u001b[1;32m--> 211\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m func(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    212\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m InvalidParameterError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    213\u001b[0m     \u001b[38;5;66;03m# When the function is just a wrapper around an estimator, we allow\u001b[39;00m\n\u001b[0;32m    214\u001b[0m     \u001b[38;5;66;03m# the function to delegate validation to the estimator, but we replace\u001b[39;00m\n\u001b[0;32m    215\u001b[0m     \u001b[38;5;66;03m# the name of the estimator by the name of the function in the error\u001b[39;00m\n\u001b[0;32m    216\u001b[0m     \u001b[38;5;66;03m# message to avoid confusion.\u001b[39;00m\n\u001b[0;32m    217\u001b[0m     msg \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(\n\u001b[0;32m    218\u001b[0m         \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter of \u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mw+ must be\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    219\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfunc\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__qualname__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m must be\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    220\u001b[0m         \u001b[38;5;28mstr\u001b[39m(e),\n\u001b[0;32m    221\u001b[0m     )\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:220\u001b[0m, in \u001b[0;36maccuracy_score\u001b[1;34m(y_true, y_pred, normalize, sample_weight)\u001b[0m\n\u001b[0;32m    154\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Accuracy classification score.\u001b[39;00m\n\u001b[0;32m    155\u001b[0m \n\u001b[0;32m    156\u001b[0m \u001b[38;5;124;03mIn multilabel classification, this function computes subset accuracy:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    216\u001b[0m \u001b[38;5;124;03m0.5\u001b[39;00m\n\u001b[0;32m    217\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    219\u001b[0m \u001b[38;5;66;03m# Compute accuracy for each possible representation\u001b[39;00m\n\u001b[1;32m--> 220\u001b[0m y_type, y_true, y_pred \u001b[38;5;241m=\u001b[39m _check_targets(y_true, y_pred)\n\u001b[0;32m    221\u001b[0m check_consistent_length(y_true, y_pred, sample_weight)\n\u001b[0;32m    222\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m y_type\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmultilabel\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:104\u001b[0m, in \u001b[0;36m_check_targets\u001b[1;34m(y_true, y_pred)\u001b[0m\n\u001b[0;32m    102\u001b[0m \u001b[38;5;66;03m# No metrics support \"multiclass-multioutput\" format\u001b[39;00m\n\u001b[0;32m    103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m y_type \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbinary\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmulticlass\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmultilabel-indicator\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[1;32m--> 104\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m is not supported\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(y_type))\n\u001b[0;32m    106\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m y_type \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbinary\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmulticlass\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[0;32m    107\u001b[0m     y_true \u001b[38;5;241m=\u001b[39m column_or_1d(y_true)\n",
+      "\u001b[1;31mValueError\u001b[0m: multiclass-multioutput is not supported"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate the model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Accuracy: {accuracy}\")"
+   ]
   }
  ],
  "metadata": {
