--- a/Condition Monitoring of Hydraulic System/KNN.ipynb
+++ b/Condition Monitoring of Hydraulic System/KNN.ipynb
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8104a85e",
+   "id": "54857e91",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e7bcc5d9",
+   "id": "b48fd13a",
    "metadata": {},
    "outputs": [
     {
@@ -2429,7 +2429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "867e6151",
+   "id": "d0c21087",
    "metadata": {},
    "source": [
     "# Fit each classifier on the corresponding target variable"
@@ -2438,7 +2438,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5654ea3a",
+   "id": "e8f666ca",
    "metadata": {},
    "outputs": [
     {
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "152a0a0e",
+   "id": "908d146e",
    "metadata": {},
    "source": [
     "# Make predictions on the test data for each classifier"
@@ -2473,7 +2473,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "3f05af8a",
+   "id": "5c44405f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2489,9 +2489,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c9bf5aaf",
+   "metadata": {},
+   "source": [
+    "# Evaluate the performance for each classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "83cd7d13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_cooler = metrics.accuracy_score(y_test['y_coolerCondition'], y_pred_cooler)\n",
+    "accuracy_valve = metrics.accuracy_score(y_test['y_valveCondition'], y_pred_valve)\n",
+    "accuracy_pump = metrics.accuracy_score(y_test['y_pumpLeak'], y_pred_pump)\n",
+    "accuracy_hydraulic = metrics.accuracy_score(y_test['y_hydraulicAcc'], y_pred_hydraulic)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ce68708",
+   "id": "9182cfb1",
    "metadata": {},
    "outputs": [],
    "source": []
