Generate classification reports and confusion matrices

--- a/Condition Monitoring of Hydraulic System/KNN.ipynb
+++ b/Condition Monitoring of Hydraulic System/KNN.ipynb
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "54857e91",
+   "id": "0fee3a5b",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b48fd13a",
+   "id": "93b5fc0f",
    "metadata": {},
    "outputs": [
     {
@@ -2429,7 +2429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0c21087",
+   "id": "34dc5a09",
    "metadata": {},
    "source": [
     "# Fit each classifier on the corresponding target variable"
@@ -2438,7 +2438,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e8f666ca",
+   "id": "fa4d1790",
    "metadata": {},
    "outputs": [
     {
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "908d146e",
+   "id": "c128ddb8",
    "metadata": {},
    "source": [
     "# Make predictions on the test data for each classifier"
@@ -2473,7 +2473,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5c44405f",
+   "id": "5688ae1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2490,7 +2490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9bf5aaf",
+   "id": "f376a7f5",
    "metadata": {},
    "source": [
     "# Evaluate the performance for each classifier"
@@ -2499,7 +2499,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "83cd7d13",
+   "id": "60cff9fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2510,12 +2510,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d4a6031b",
+   "metadata": {},
+   "source": [
+    "# Print results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "8c50f2c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy - Cooler Condition: 1.0\n",
+      "Accuracy - Valve Condition: 0.7868480725623582\n",
+      "Accuracy - Pump Leak: 0.9863945578231292\n",
+      "Accuracy - Hydraulic Acc: 0.9229024943310657\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy - Cooler Condition:\",accuracy_cooler)\n",
+    "print(\"Accuracy - Valve Condition:\",accuracy_valve)\n",
+    "print(\"Accuracy - Pump Leak:\",accuracy_pump)\n",
+    "print(\"Accuracy - Hydraulic Acc:\",accuracy_hydraulic)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4caf348",
+   "metadata": {},
+   "source": [
+    "# Generate classification reports and confusion matrices"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9182cfb1",
+   "id": "20f99f7d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "report_cooler = classification_report(y_test['y_coolerCondition'], y_pred_cooler)\n",
+    "matrix_cooler = confusion_matrix(y_test['y_coolerCondition'], y_pred_cooler)\n",
+    "\n",
+    "report_valve = classification_report(y_test['y_valveCondition'], y_pred_valve)\n",
+    "matrix_valve = confusion_matrix(y_test['y_valveCondition'], y_pred_valve)\n",
+    "\n",
+    "report_pump = classification_report(y_test['y_pumpLeak'], y_pred_pump)\n",
+    "matrix_pump = confusion_matrix(y_test['y_pumpLeak'], y_pred_pump)\n",
+    "\n",
+    "report_hydraulic = classification_report(y_test['y_hydraulicAcc'], y_pred_hydraulic)\n",
+    "matrix_hydraulic = confusion_matrix(y_test['y_hydraulicAcc'], y_pred_hydraulic)\n",
+    "\n",
+    "report_stable = classification_report(y_test['y_stableFlag'], y_pred_stable)\n",
+    "matrix_stable = confusion_matrix(y_test['y_stableFlag'], y_pred_stable)"
+   ]
   }
  ],
  "metadata": {
