Generate and print classification reports and confusion matrices

--- a/Condition Monitoring of Hydraulic System/Bagging.ipynb
+++ b/Condition Monitoring of Hydraulic System/Bagging.ipynb
@@ -2428,7 +2428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25a45a2d",
+   "id": "5f8bbc6f",
    "metadata": {},
    "source": [
     "# Fit each classifier on the corresponding target variable"
@@ -2437,7 +2437,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "ed501ce2",
+   "id": "b96c5959",
    "metadata": {},
    "outputs": [
     {
@@ -2493,7 +2493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d92e1df0",
+   "id": "c2b43b50",
    "metadata": {},
    "source": [
     "# Evaluate the performance for each classifier"
@@ -2501,33 +2501,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "b13f1354",
+   "execution_count": 73,
+   "id": "a439e5f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_cooler = accuracy_score(y_test['y_coolerCondition'], y_pred_cooler)\n",
+    "accuracy_valve = accuracy_score(y_test['y_valveCondition'], y_pred_valve)\n",
+    "accuracy_pump = accuracy_score(y_test['y_pumpLeak'], y_pred_pump)\n",
+    "accuracy_hydraulic = accuracy_score(y_test['y_hydraulicAcc'], y_pred_hydraulic)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2204c15",
+   "metadata": {},
+   "source": [
+    "# Print results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "03a58e86",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'metrics' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[72], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m accuracy_cooler \u001b[38;5;241m=\u001b[39m metrics\u001b[38;5;241m.\u001b[39maccuracy_score(y_test[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124my_coolerCondition\u001b[39m\u001b[38;5;124m'\u001b[39m], y_pred_cooler)\n\u001b[0;32m      2\u001b[0m accuracy_valve \u001b[38;5;241m=\u001b[39m metrics\u001b[38;5;241m.\u001b[39maccuracy_score(y_test[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124my_valveCondition\u001b[39m\u001b[38;5;124m'\u001b[39m], y_pred_valve)\n\u001b[0;32m      3\u001b[0m accuracy_pump \u001b[38;5;241m=\u001b[39m metrics\u001b[38;5;241m.\u001b[39maccuracy_score(y_test[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124my_pumpLeak\u001b[39m\u001b[38;5;124m'\u001b[39m], y_pred_pump)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'metrics' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy - Cooler Condition: 0.9977324263038548\n",
+      "Accuracy - Valve Condition: 0.7913832199546486\n",
+      "Accuracy - Pump Leak: 0.9863945578231292\n",
+      "Accuracy - Hydraulic Acc: 0.9501133786848073\n"
      ]
     }
    ],
    "source": [
-    "accuracy_cooler = metrics.accuracy_score(y_test['y_coolerCondition'], y_pred_cooler)\n",
-    "accuracy_valve = metrics.accuracy_score(y_test['y_valveCondition'], y_pred_valve)\n",
-    "accuracy_pump = metrics.accuracy_score(y_test['y_pumpLeak'], y_pred_pump)\n",
-    "accuracy_hydraulic = metrics.accuracy_score(y_test['y_hydraulicAcc'], y_pred_hydraulic)"
+    "print(\"Accuracy - Cooler Condition:\",accuracy_cooler)\n",
+    "print(\"Accuracy - Valve Condition:\",accuracy_valve)\n",
+    "print(\"Accuracy - Pump Leak:\",accuracy_pump)\n",
+    "print(\"Accuracy - Hydraulic Acc:\",accuracy_hydraulic)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3101a1e",
+   "metadata": {},
+   "source": [
+    "# Generate classification reports and confusion matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "8e338f9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "report_cooler = classification_report(y_test['y_coolerCondition'], y_pred_cooler)\n",
+    "matrix_cooler = confusion_matrix(y_test['y_coolerCondition'], y_pred_cooler)\n",
+    "\n",
+    "report_valve = classification_report(y_test['y_valveCondition'], y_pred_valve)\n",
+    "matrix_valve = confusion_matrix(y_test['y_valveCondition'], y_pred_valve)\n",
+    "\n",
+    "report_pump = classification_report(y_test['y_pumpLeak'], y_pred_pump)\n",
+    "matrix_pump = confusion_matrix(y_test['y_pumpLeak'], y_pred_pump)\n",
+    "\n",
+    "report_hydraulic = classification_report(y_test['y_hydraulicAcc'], y_pred_hydraulic)\n",
+    "matrix_hydraulic = confusion_matrix(y_test['y_hydraulicAcc'], y_pred_hydraulic)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1163d91",
+   "id": "13ae32b5",
    "metadata": {},
    "outputs": [],
    "source": []
